--- a/muComb/muComb_MJ.ipynb
+++ b/muComb/muComb_MJ.ipynb
@@ -10,7 +10,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting pyhf\n",
+      "  Downloading pyhf-0.7.1-py3-none-any.whl (159 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m159.2/159.2 KB\u001b[0m \u001b[31m96.3 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: numpy in /home/josue/.local/lib/python3.10/site-packages (from pyhf) (1.24.3)\n",
+      "Requirement already satisfied: click>=8.0.0 in /usr/lib/python3/dist-packages (from pyhf) (8.0.3)\n",
+      "Collecting scipy>=1.2.0\n",
+      "  Downloading scipy-1.10.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (34.4 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.4/34.4 MB\u001b[0m \u001b[31m169.5 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:06\u001b[0m\n",
+      "\u001b[?25hCollecting tqdm>=4.56.0\n",
+      "  Downloading tqdm-4.65.0-py3-none-any.whl (77 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.1/77.1 KB\u001b[0m \u001b[31m227.4 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: jsonschema>=4.15.0 in /home/josue/.local/lib/python3.10/site-packages (from pyhf) (4.17.3)\n",
+      "Collecting jsonpatch>=1.15\n",
+      "  Using cached jsonpatch-1.32-py2.py3-none-any.whl (12 kB)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /usr/lib/python3/dist-packages (from pyhf) (5.4.1)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in /home/josue/.local/lib/python3.10/site-packages (from jsonpatch>=1.15->pyhf) (2.3)\n",
+      "Requirement already satisfied: pyrsistent!=0.17.0,!=0.17.1,!=0.17.2,>=0.14.0 in /home/josue/.local/lib/python3.10/site-packages (from jsonschema>=4.15.0->pyhf) (0.19.3)\n",
+      "Requirement already satisfied: attrs>=17.4.0 in /home/josue/.local/lib/python3.10/site-packages (from jsonschema>=4.15.0->pyhf) (22.2.0)\n",
+      "Installing collected packages: tqdm, scipy, jsonpatch, pyhf\n",
+      "Successfully installed jsonpatch-1.32 pyhf-0.7.1 scipy-1.10.1 tqdm-4.65.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pyhf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +91,16 @@
    "source": [
     "model1 = pyhf.simplemodels.uncorrelated_background(signal = list(sl), bkg = list(bkg), bkg_uncertainty = list(errbkg))\n",
     "model2 = pyhf.simplemodels.uncorrelated_background(signal = list(WZ), bkg = list(bkg), bkg_uncertainty = list(errbkg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "observations1 = np.concatenate((Data, model1.config.auxdata)) #Observaciones modelo 1 - Señal sl (VBF) / Señal axial (MJ)\n",
+    "observations2 = np.concatenate((Data, model2.config.auxdata)) #Observaciones modelo 2 - Señal WZ (VBF) / Señal axial (MJ)\n"
    ]
   },
   {
@@ -118,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -126,31 +173,59 @@
      "output_type": "stream",
      "text": [
       "Señal sl (VBF) / Señal axial (MJ)\n",
-      "  CLs (obs): Cls = 0.0495\n",
-      "  CLs (exp): CLs (0σ) = 0.0503\n",
+      "  CLs (obs): Cls = 0.0486\n",
+      "  CLs (exp): CLs (0σ) = 0.0494\n",
       "Señal WZ (VBF) / Señal axial (MJ)\n",
-      "  CLs (obs): Cls = 0.0493\n",
-      "  CLs (exp): CLs (0σ) = 0.0474\n"
+      "  CLs (obs): Cls = 0.0514\n",
+      "  CLs (exp): CLs (0σ) = 0.0495\n"
      ]
     }
    ],
    "source": [
     "#Calculo del p-value\n",
-    "CLs_obs1, CLs_exp_band1 = pyhf.infer.hypotest(\n",
-    "    obs_limit1, observations1, model1, return_expected_set=True\n",
+    "CLs_obs1, tails1 ,CLs_exp_band1 = pyhf.infer.hypotest(\n",
+    "    0.2366, observations1, model1, return_expected_set=True, return_tail_probs = True\n",
     ")\n",
     "\n",
     "print(\"Señal sl (VBF) / Señal axial (MJ)\")\n",
     "print(f\"  CLs (obs): Cls = {CLs_obs1:.4f}\")\n",
     "print(f\"  CLs (exp): CLs (0σ) = {CLs_exp_band1[2]:.4f}\")\n",
     "\n",
-    "CLs_obs2, CLs_exp_band2 = pyhf.infer.hypotest(\n",
-    "    obs_limit2, observations2, model2, return_expected_set=True\n",
+    "CLs_obs2, tails2, CLs_exp_band2 = pyhf.infer.hypotest(\n",
+    "    0.2364, observations2, model2, return_expected_set=True, return_tail_probs = True\n",
     ")\n",
     "\n",
     "print(\"Señal WZ (VBF) / Señal axial (MJ)\")\n",
     "print(f\"  CLs (obs): Cls = {CLs_obs2:.4f}\")\n",
     "print(f\"  CLs (exp): CLs (0σ) = {CLs_exp_band2[2]:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(0.04860155),\n",
+       " [array(0.02408731), array(0.49560789)],\n",
+       " [array(0.00161434),\n",
+       "  array(0.00954475),\n",
+       "  array(0.04943563),\n",
+       "  array(0.19887055),\n",
+       "  array(0.52600039)])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pyhf.infer.hypotest(\n",
+    "    0.2366, observations1, model1, return_expected_set=True, return_tail_probs = True\n",
+    ")\n"
    ]
   }
  ],
