--- a/Calculo_Parametros/Mono-jet.ipynb
+++ b/Calculo_Parametros/Mono-jet.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,66 +41,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Upper limit (obs): μ = 1.0072\n",
-      "Upper limit (exp): μ = 0.1020\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model1 = pyhf.simplemodels.uncorrelated_background(\n",
-    "    signal=list(1.108*toySignal), bkg=list(MJ_bkg), bkg_uncertainty=list(MJ_errbkg)\n",
-    ") #creamos el modelo\n",
+    "signalPar = np.linspace(1.106, 1.11, 100)\n",
     "\n",
-    "observations1 = np.concatenate((toyData, model1.config.auxdata))\n",
+    "for i in signalPar:\n",
+    "    model1 = pyhf.simplemodels.uncorrelated_background(\n",
+    "        signal=list(i*toySignal), bkg=list(MJ_bkg), bkg_uncertainty=list(MJ_errbkg)\n",
+    "    ) #creamos el modelo\n",
     "\n",
-    "poi_values1 = np.linspace(0.01, 5, 50)\n",
-    "obs_limit1, exp_limits1, (scan, results) = pyhf.infer.intervals.upper_limits.upper_limit(\n",
-    "    observations1, model1, poi_values1, level=0.05, return_results=True\n",
-    ")\n",
+    "    observations1 = np.concatenate((toyData, model1.config.auxdata))\n",
+    "\n",
+    "    poi_values1 = np.linspace(0.01, 5, 50)\n",
+    "    obs_limit1, exp_limits1, (scan, results) = pyhf.infer.intervals.upper_limits.upper_limit(\n",
+    "        observations1, model1, poi_values1, level=0.05, return_results=True\n",
+    "    )\n",
+    "    if abs(1 - obs_limit1) < 1e-3:\n",
+    "        print(abs(1 - obs_limit1), i)\n",
+    "        break\n",
+    "    \n",
     "print(f\"Upper limit (obs): μ = {obs_limit1:.4f}\")\n",
     "print(f\"Upper limit (exp): μ = {exp_limits1[2]:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-value =  0.05013707205444373\n"
+      "0.0006291270379414071 1.0426262626262626\n",
+      "p-value =  0.049370872962058596\n"
      ]
     }
    ],
    "source": [
     "#p-value\n",
-    "model1 = pyhf.simplemodels.uncorrelated_background(\n",
-    "    signal=list(1.0425*toySignal), bkg=list(MJ_bkg), bkg_uncertainty=list(MJ_errbkg)\n",
-    ") #creamos el modelo\n",
+    "pvalPar = np.linspace(1.02, 1.06, 100)\n",
     "\n",
-    "observations1 = np.concatenate((toyData, model1.config.auxdata))\n",
+    "for i in pvalPar:\n",
+    "    model1 = pyhf.simplemodels.uncorrelated_background(\n",
+    "        signal=list(i*toySignal), bkg=list(MJ_bkg), bkg_uncertainty=list(MJ_errbkg)\n",
+    "    ) #creamos el modelo\n",
     "\n",
-    "pvalue1 = pyhf.infer.hypotest(\n",
-    "    1, observations1, model1, return_expected_set=True, return_tail_probs = True\n",
-    ")[1][0]\n",
+    "    observations1 = np.concatenate((toyData, model1.config.auxdata))\n",
+    "\n",
+    "    pvalue1 = pyhf.infer.hypotest(\n",
+    "        1, observations1, model1, return_expected_set=True, return_tail_probs = True\n",
+    "    )[1][0]\n",
+    "    if abs(0.05 - pvalue1) < 1e-3:\n",
+    "        print(abs(0.05 - pvalue1), i)\n",
+    "        break\n",
+    "\n",
     "print(\"p-value = \", pvalue1)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "as"
+   ]
   }
  ],
  "metadata": {
@@ -119,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
