--- a/Calculo_Parametros/Mass_Scan/massScan.ipynb
+++ b/Calculo_Parametros/Mass_Scan/massScan.ipynb
@@ -60,9 +60,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/codespace/.local/lib/python3.10/site-packages/scipy/optimize/_optimize.py:404: RuntimeWarning: Values in x were outside bounds during a minimize step, clipping to bounds\n",
+      "  warnings.warn(\"Values in x were outside bounds during a \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Signal 800GeV\n",
+      "    Upper limit (obs): μ = 1.0864\n",
+      "    Upper limit (exp): μ = 0.1011\n",
+      "    p-value = 0.50000000 \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/codespace/.local/lib/python3.10/site-packages/scipy/optimize/_optimize.py:404: RuntimeWarning: Values in x were outside bounds during a minimize step, clipping to bounds\n",
+      "  warnings.warn(\"Values in x were outside bounds during a \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Signal 850GeV\n",
+      "    Upper limit (obs): μ = 1.0993\n",
+      "    Upper limit (exp): μ = 0.1020\n",
+      "    p-value = 0.50000000 \n",
+      "\n",
+      "Signal 900GeV\n",
+      "    Upper limit (obs): μ = 1.1031\n",
+      "    Upper limit (exp): μ = 0.1024\n",
+      "    p-value = 0.50000000 \n",
+      "\n",
+      "Signal 950GeV\n",
+      "    Upper limit (obs): μ = 1.1036\n",
+      "    Upper limit (exp): μ = 0.1025\n",
+      "    p-value = 0.50000000 \n",
+      "\n",
+      "Signal 1050GeV\n",
+      "    Upper limit (obs): μ = 1.1079\n",
+      "    Upper limit (exp): μ = 0.1030\n",
+      "    p-value = 0.50000000 \n",
+      "\n",
+      "Signal 1100GeV\n",
+      "    Upper limit (obs): μ = 1.1102\n",
+      "    Upper limit (exp): μ = 0.1034\n",
+      "    p-value = 0.50000000 \n",
+      "\n",
+      "Signal 1150GeV\n",
+      "    Upper limit (obs): μ = 1.1078\n",
+      "    Upper limit (exp): μ = 0.1032\n",
+      "    p-value = 0.50000000 \n",
+      "\n",
+      "Signal 1200GeV\n",
+      "    Upper limit (obs): μ = 1.1054\n",
+      "    Upper limit (exp): μ = 0.1029\n",
+      "    p-value = 0.50000000 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for signal in signalList:\n",
     "    model1 = pyhf.simplemodels.uncorrelated_background(\n",
@@ -81,8 +150,52 @@
     "    \n",
     "    print(\"Signal \" + signal[34:-4])\n",
     "    print(f\"    Upper limit (obs): μ = {obs_limit1:.4f}\")\n",
-    "    print(f\"    Upper limit (exp): μ = {exp_limits1[2]:.4f} \\n\")\n",
-    "    print(f\"    p-value = {pvalue1:.8f}\")"
+    "    print(f\"    Upper limit (exp): μ = {exp_limits1[2]:.4f}\")\n",
+    "    print(f\"    p-value = {pvalue1:.8f} \\n\")\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0006291270379414071 1.0426262626262626\n",
+      "p-value =  0.049370872962058596\n"
+     ]
+    }
+   ],
+   "source": [
+    "#p-value\n",
+    "pvalPar = np.linspace(1.02, 1.06, 100)\n",
+    "\n",
+    "for i in pvalPar:\n",
+    "    model1 = pyhf.simplemodels.uncorrelated_background(\n",
+    "        signal=list(i*toySignal), bkg=list(MJ_bkg), bkg_uncertainty=list(MJ_errbkg)\n",
+    "    ) #creamos el modelo\n",
+    "\n",
+    "    observations1 = np.concatenate((toyData, model1.config.auxdata))\n",
+    "\n",
+    "    pvalue1 = pyhf.infer.hypotest(\n",
+    "        1, observations1, model1, return_expected_set=True, return_tail_probs = True\n",
+    "    )[1][0]\n",
+    "    if abs(0.05 - pvalue1) < 1e-3:\n",
+    "        print(abs(0.05 - pvalue1), i)\n",
+    "        break\n",
+    "\n",
+    "print(\"p-value = \", pvalue1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "as"
    ]
   }
  ],
