--- a/Calculo_Parametros/Mass_Scan/massScan.ipynb
+++ b/Calculo_Parametros/Mass_Scan/massScan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
        " './pt_miss_histogram_monojet_BMtoy_1200GeV.csv']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,71 +68,16 @@
      "output_type": "stream",
      "text": [
       "/home/codespace/.local/lib/python3.10/site-packages/scipy/optimize/_optimize.py:404: RuntimeWarning: Values in x were outside bounds during a minimize step, clipping to bounds\n",
-      "  warnings.warn(\"Values in x were outside bounds during a \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Signal 800GeV\n",
-      "    Upper limit (obs): μ = 1.0864\n",
-      "    Upper limit (exp): μ = 0.1011\n",
-      "    p-value = 0.50000000 \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  warnings.warn(\"Values in x were outside bounds during a \"\n",
       "/home/codespace/.local/lib/python3.10/site-packages/scipy/optimize/_optimize.py:404: RuntimeWarning: Values in x were outside bounds during a minimize step, clipping to bounds\n",
       "  warnings.warn(\"Values in x were outside bounds during a \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Signal 850GeV\n",
-      "    Upper limit (obs): μ = 1.0993\n",
-      "    Upper limit (exp): μ = 0.1020\n",
-      "    p-value = 0.50000000 \n",
-      "\n",
-      "Signal 900GeV\n",
-      "    Upper limit (obs): μ = 1.1031\n",
-      "    Upper limit (exp): μ = 0.1024\n",
-      "    p-value = 0.50000000 \n",
-      "\n",
-      "Signal 950GeV\n",
-      "    Upper limit (obs): μ = 1.1036\n",
-      "    Upper limit (exp): μ = 0.1025\n",
-      "    p-value = 0.50000000 \n",
-      "\n",
-      "Signal 1050GeV\n",
-      "    Upper limit (obs): μ = 1.1079\n",
-      "    Upper limit (exp): μ = 0.1030\n",
-      "    p-value = 0.50000000 \n",
-      "\n",
-      "Signal 1100GeV\n",
-      "    Upper limit (obs): μ = 1.1102\n",
-      "    Upper limit (exp): μ = 0.1034\n",
-      "    p-value = 0.50000000 \n",
-      "\n",
-      "Signal 1150GeV\n",
-      "    Upper limit (obs): μ = 1.1078\n",
-      "    Upper limit (exp): μ = 0.1032\n",
-      "    p-value = 0.50000000 \n",
-      "\n",
-      "Signal 1200GeV\n",
-      "    Upper limit (obs): μ = 1.1054\n",
-      "    Upper limit (exp): μ = 0.1029\n",
-      "    p-value = 0.50000000 \n",
-      "\n"
      ]
     }
    ],
    "source": [
+    "f = open(\"resultados.txt\", \"at\")\n",
+    "poi_values1 = np.linspace(0.01, 5, 50)\n",
+    "\n",
     "for signal in signalList:\n",
     "    model1 = pyhf.simplemodels.uncorrelated_background(\n",
     "        signal=list(pd.read_csv(signal)[\"counts\"]), bkg=list(MJ_bkg), bkg_uncertainty=list(MJ_errbkg)\n",
@@ -140,33 +85,46 @@
     "\n",
     "    observations1 = np.concatenate((MJ_data + pd.read_csv(signal)[\"counts\"], model1.config.auxdata))\n",
     "\n",
-    "    poi_values1 = np.linspace(0.01, 5, 50)\n",
     "    obs_limit1, exp_limits1, (scan, results) = pyhf.infer.intervals.upper_limits.upper_limit(\n",
     "        observations1, model1, poi_values1, level=0.05, return_results=True\n",
     "    )\n",
-    "    pvalue1 = pyhf.infer.hypotest(\n",
-    "        1, observations1, model1, return_expected_set=True, return_tail_probs = True\n",
-    "    )[1][0]\n",
+    "    CL = pyhf.infer.hypotest(\n",
+    "        1, observations1, model1,  return_expected= True, return_expected_set=True, return_tail_probs = True\n",
+    "    )\n",
     "    \n",
-    "    print(\"Signal \" + signal[34:-4])\n",
-    "    print(f\"    Upper limit (obs): μ = {obs_limit1:.4f}\")\n",
-    "    print(f\"    Upper limit (exp): μ = {exp_limits1[2]:.4f}\")\n",
-    "    print(f\"    p-value = {pvalue1:.8f} \\n\")\n",
     "    \n",
+    "    f.write(\"================================================================\\n\")\n",
+    "    f.write(\"Signal \" + signal[34:-4] + \"\\n\")\n",
+    "    f.write(f\"    Upper limit (obs): μ = {obs_limit1:.4f}\")\n",
+    "    f.write(f\"    Upper limit (exp): μ = {exp_limits1[2]:.4f} \\n\")\n",
+    "    f.write(f\"    p-value = {CL[1][0]:.8f}\\n\")\n",
+    "    f.write(f\"    CLsb = {CL[1][1]:.8f}\\n\")\n",
+    "    f.write(f\"    CLb = {CL[0]:.8f}\\n\")\n",
+    "    f.write(f\"    CLs = {CL[2]:.8f}\\n\")\n",
+    "    f.write(f\"    -2σ = {CL[3][0]:.8f}\\n\")\n",
+    "    f.write(f\"    -1σ = {CL[3][1]:.8f}\\n\")\n",
+    "    f.write(f\"     0σ = {CL[3][2]:.8f}\\n\")\n",
+    "    f.write(f\"     1σ = {CL[3][3]:.8f}\\n\")\n",
+    "    f.write(f\"     2σ = {CL[3][4]:.8f}\\n\")\n",
+    "    f.write(\"================================================================\\n\")\n",
+    "f.close()\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0006291270379414071 1.0426262626262626\n",
-      "p-value =  0.049370872962058596\n"
+     "ename": "NameError",
+     "evalue": "name 'toySignal' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m pvalPar \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlinspace(\u001b[39m1.02\u001b[39m, \u001b[39m1.06\u001b[39m, \u001b[39m100\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m pvalPar:\n\u001b[1;32m      5\u001b[0m     model1 \u001b[39m=\u001b[39m pyhf\u001b[39m.\u001b[39msimplemodels\u001b[39m.\u001b[39muncorrelated_background(\n\u001b[0;32m----> 6\u001b[0m         signal\u001b[39m=\u001b[39m\u001b[39mlist\u001b[39m(i\u001b[39m*\u001b[39mtoySignal), bkg\u001b[39m=\u001b[39m\u001b[39mlist\u001b[39m(MJ_bkg), bkg_uncertainty\u001b[39m=\u001b[39m\u001b[39mlist\u001b[39m(MJ_errbkg)\n\u001b[1;32m      7\u001b[0m     ) \u001b[39m#creamos el modelo\u001b[39;00m\n\u001b[1;32m      9\u001b[0m     observations1 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mconcatenate((toyData, model1\u001b[39m.\u001b[39mconfig\u001b[39m.\u001b[39mauxdata))\n\u001b[1;32m     11\u001b[0m     pvalue1 \u001b[39m=\u001b[39m pyhf\u001b[39m.\u001b[39minfer\u001b[39m.\u001b[39mhypotest(\n\u001b[1;32m     12\u001b[0m         \u001b[39m1\u001b[39m, observations1, model1, return_expected_set\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, return_tail_probs \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m     13\u001b[0m     )[\u001b[39m1\u001b[39m][\u001b[39m0\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'toySignal' is not defined"
      ]
     }
    ],
